terraform/rds.tf
resource "aws_db_subnet_group" "db_subnet_group" {
  name = "three-tier-db-subnet-group"

  subnet_ids = [
    aws_subnet.private_subnet_1.id,
    aws_subnet.private_subnet_2.id
  ]

  tags = {
    Name = "DB-Subnet-Group"
  }
}

resource "aws_db_instance" "mysql" {

  identifier = "three-tier-mysql"

  engine = "mysql"

  engine_version = "8.0"

  instance_class = "db.t3.micro"

  allocated_storage = 20

  storage_type = "gp2"

  username = "admin"

  password = "Password@123"

  skip_final_snapshot = true

  publicly_accessible = false

  multi_az = false

  db_subnet_group_name = aws_db_subnet_group.db_subnet_group.name

  vpc_security_group_ids = [
    aws_security_group.db_sg.id
  ]

  tags = {
    Name = "Three-Tier-RDS"
  }
}
